--- a/Project/AMS/templates/login.html
+++ b/Project/AMS/templates/login.html
@@ -6,7 +6,7 @@
     <title>Login</title>
 </head>
 <body>
-    <form action="/loginAuth" method="POST">
+    <form action="/login" method="POST">
         Username: <input type="text" name="username" required><br>
         Password: <input type="password" name="password" required><br>
         <button type="submit" value="Login">Login</button>
