--- a/Project/AMS/templates/page_not_found.html
+++ b/Project/AMS/templates/page_not_found.html
@@ -3,9 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Index Page</title>
+    <title>Document</title>
 </head>
 <body>
-    this is the index page.
+    <h1>Error: {{error}}</h1>
+    Oops, there is nothing here...
 </body>
 </html>
