--- a/Project/AMS/templates/register.html
+++ b/Project/AMS/templates/register.html
@@ -6,11 +6,12 @@
     <title>Register</title>
 </head>
 <body>
-    <form action="/regAuth" method="POST">
+    <form action="#" method="POST">
         Username: <input type="text" name="username"><br>
         Password: <input type="password" name="password"><br>
         Confirm password:<input type="password" name="password"><br>
-        <button type="submit">Submit</button>
+        <input type="button" name="submit" value="Submit">
+        <input type="button" name="back" value="Back To Login">
     </form>
 </body>
 </html>
