--- a/Project/AMS/templates/login.html
+++ b/Project/AMS/templates/login.html
@@ -10,6 +10,11 @@
         Username: <input type="text" name="username" required><br>
         Password: <input type="password" name="password" required><br>
         <button type="submit" value="Login">Login</button>
+        <a href="/reg"><button type="button" value="Register">Register</button>
+</a>
+    <div>{{error}}</div><br>
+    <div>{{usr}}</div><br>
+    <div>{{pw}}</div><br>
     </form>
 </body>
 </html>
