--- a/Project/AMS/templates/page_not_found.html
+++ b/Project/AMS/templates/page_not_found.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Error: {{error}}</h1>
+    <h1>Error: </h1><br>
+    <div>{{error}}</div>
     Oops, there is nothing here...
 </body>
 </html>
