--- a/Project/AMS/templates/register.html
+++ b/Project/AMS/templates/register.html
@@ -10,8 +10,8 @@
         Username: <input type="text" name="username"><br>
         Password: <input type="password" name="password"><br>
         Confirm password:<input type="password" name="password"><br>
-        <input type="button" name="submit" value="Submit">
-        <input type="button" name="back" value="Back To Login">
+        <input type="submit" name="submit" value="Submit">
+        <a href="/login"><button type="button" value="back">Back to Login</button></a>
     </form>
 </body>
 </html>
