login form for different users add progress report

--- a/Project/AMS/templates/index.html
+++ b/Project/AMS/templates/index.html
@@ -8,6 +8,10 @@
 <body>
     this is the index page. <br>
     <a href="/login">Login</a>
+    <a href="/login/as">Login as Airline Staff</a>
+    <a href="/login/ba">Login as Booking Agent </a>
     <a href="/reg">Register</a>
+    <a href="/reg/as">Register as Airline Staff</a>
+    <a href="/reg/ba">Register as Booking Agent </a>
 </body>
 </html>
