--- a/Project/AMS/templates/reg.html
+++ b/Project/AMS/templates/reg.html
@@ -3,10 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login</title>
+    <title>Register</title>
 </head>
 <body>
-    {% block header %}{%endblock%}
-    {% block content%}{%endblock%}
+    <form action="#" method="POST">
+        {%block header%}{%endblock%}
+        {%block content%}{%endblock%}
 </body>
 </html>
