--- a/Project/AMS/templates/b/reg_b.html
+++ b/Project/AMS/templates/b/reg_b.html
@@ -1,10 +1,11 @@
 {%extends 'reg.html'%}
-{%block header%} Airline Staff Login {%endblock%}
+{%block header%}Booking Agent Registration{%endblock%}
 {%block content%}
-        Username: <input type="text" name="username"><br>
+        Email: <input type="email" name="email"><br>
         Password: <input type="password" name="password"><br>
-        Confirm password:<input type="password" name="password"><br>
+        Confirm password:<input type="password" name="password_c"><br>
         <input type="submit" name="submit" value="Submit">
         <a href="/login/{{role}}"><button type="button" value="back">Back to Login</button></a>
+        <p>A BAID will be assigned to you once the registration is done.</p>
     </form>
 {%endblock%}
