booking agent register completed

--- a/Project/AMS/templates/b_confirm.html
+++ b/Project/AMS/templates/b_confirm.html
@@ -3,11 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Register</title>
+    <title>Booking Agent Registration Confirm</title>
 </head>
 <body>
-    <form action="#" method="POST">
-        {%block header%}{%endblock%} <br>
-        {%block content%}{%endblock%}
+    <h1>Congratulations! Your registration is successful, and your Booking Agent ID is {{uuid}}. Please remember it for login.</h1>
 </body>
 </html>
