--- a/Project/AMS/templates/login_index.html
+++ b/Project/AMS/templates/login_index.html
@@ -3,11 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Register</title>
+    <title>Login</title>
 </head>
 <body>
-    <form action="#" method="POST">
-        {%block header%}{%endblock%} <br>
-        {%block content%}{%endblock%}
+   <a href="/auth/login/a">Login for Airline Staff</a> 
+   <a href="/auth/login/b">Login for Booking Agent</a> 
+   <a href="/auth/login/c">Login for Customer</a> 
 </body>
 </html>
