--- a/Project/AMS/templates/reg_c.html
+++ b/Project/AMS/templates/reg_c.html
@@ -5,9 +5,9 @@
         Username: <input type="text" name="username"><br>
         Email: <input type="email" name="email"><br>
         Password: <input type="password" name="password"><br>
-        Confirm password:<input type="password_c" name="password_c"><br>
+        Confirm password:<input type="password" name="password_c"><br>
         <h3>Address:</h3> <br>
-        Building #: <input type="text" name="building#"><br>
+        Building #: <input type="text" name="building"><br>
         Street: <input type="text" name="street"><br>
         State: <input type="text" name="state"><br>
         <h3>Basic Info:</h3> <br>
@@ -15,7 +15,7 @@
         Passport: <input type="text" name="passport"><br>
         Passport Expiration Date: <input type="date" name="passport_exp"><br>
         Passport Country: <input type="text" name="passport_country"><br>
-        Date of Birth: <input type="date" name="b_day"><br>
+        Date of Birth: <input type="date" name="bday"><br>
         <input type="submit" name="submit" value="Submit">
         <a href="/login/{{role}}"><button type="button" value="back">Back to Login</button></a>
     </form>
