--- a/Project/AMS/templates/reg_index.html
+++ b/Project/AMS/templates/reg_index.html
@@ -3,11 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Register</title>
+    <title>Registration</title>
 </head>
 <body>
-    <form action="#" method="POST">
-        {%block header%}{%endblock%} <br>
-        {%block content%}{%endblock%}
+   <a href="/auth/register/a">Airline Staff</a> 
+   <a href="/auth/register/b">Booking Agent</a> 
+   <a href="/auth/register/c">Customer</a> 
 </body>
 </html>
