--- a/Project/AMS/templates/login_a.html
+++ b/Project/AMS/templates/login_a.html
@@ -5,7 +5,7 @@
     Username: <input type="text" name="username" required><br>
     Password: <input type="password" name="password" required><br>
     <button type="submit" value="Login">Login</button>
-    <a href="/reg/{{role}}"><button type="button" value="Register">Register</button>
+    <a href="/auth/register/{{role}}"><button type="button" value="Register">Register</button>
     <a href="">Forget Password?</a>
     <div>{{error}}</div><br>
     <div>{{usr}}</div><br>
