--- a/Project/AMS/templates/reg.html
+++ b/Project/AMS/templates/reg.html
@@ -9,5 +9,14 @@
     <form action="#" method="POST">
         {%block header%}{%endblock%} <br>
         {%block content%}{%endblock%}
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
 </body>
 </html>
