--- a/Project/AMS/templates/reg_confirm.html
+++ b/Project/AMS/templates/reg_confirm.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>Your registration is successful.</h1><br>
-    {%if role == 'b'%}
-    <h1>Your Booking Agent ID is {{BAID}}.</h1><br>
-    {%endif%}
-    <a href="/auth/login/{{role}}"></a>
+    {% if BAID %}
+        <h2>Your Booking Agent ID is {{BAID}}.</h2><br>
+    {% endif %}
+    <a href="/auth/login/{{role}}">Back to Login</a>
 </body>
 </html>
