--- a/Project/AMS/templates/reg_c.html
+++ b/Project/AMS/templates/reg_c.html
@@ -9,6 +9,7 @@
         <h3>Address:</h3> <br>
         Building #: <input type="text" name="building"><br>
         Street: <input type="text" name="street"><br>
+        City: <input type="text" name="city"><br>
         State: <input type="text" name="state"><br>
         <h3>Basic Info:</h3> <br>
         Phone: <input type="number" name="phone"><br>
