--- a/Project/AMS/templates/login.html
+++ b/Project/AMS/templates/login.html
@@ -8,5 +8,14 @@
 <body>
     {% block header %}{%endblock%}
     {% block content%}{%endblock%}
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <ul class=flashes>
+      {% for message in messages %}
+        <li>{{ message }}</li>
+      {% endfor %}
+      </ul>
+    {% endif %}
+    {% endwith %}
 </body>
 </html>
