--- a/Project/AMS/templates/login_c.html
+++ b/Project/AMS/templates/login_c.html
@@ -3,7 +3,7 @@
 {%block content%}
 <form action="auth/login{{role}}" method="POST">
     <!-- front-end will handle -->
-    Username: <input type="text" name="username" required><br>
+    Email: <input type="email" name="email" required><br>
     Password: <input type="password" name="password" required><br>
     <button type="submit" value="Login">Login</button>
     <a href="/reg/{{role}}"><button type="button" value="Register">Register</button>
