--- a/Project/AMS/templates/reg_c.html
+++ b/Project/AMS/templates/reg_c.html
@@ -18,7 +18,7 @@
         Passport Country: <input type="text" name="passport_country"><br>
         Date of Birth: <input type="date" name="bday"><br>
         <input type="submit" name="submit" value="Submit">
-        <a href="/login/{{role}}"><button type="button" value="back">Back to Login</button></a>
+        <a href="/auth/login/c"><button type="button" value="back">Back to Login</button></a>
     </form>
 
 {%endblock%}
