--- a/Project/AMS/templates/login.html
+++ b/Project/AMS/templates/login.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     {% block header %}{%endblock%}
-    {% block content%}{%endblock%}
+    <form action="#" method="POST">
+        {% block form %}{% endblock %}
+    </form>
+    {% block content %}{% endblock %}
     {% with messages = get_flashed_messages() %}
     {% if messages %}
       <ul class=flashes>
