--- a/Project/AMS/templates/login_b.html
+++ b/Project/AMS/templates/login_b.html
@@ -1,16 +1,11 @@
 {%extends "login.html"%}
 {%block header %} Booking Agent Login {%endblock%}
-{%block content%}
-<form action="/auth/login" method="POST">
+{% block form %}
     Booking Agent ID: <input type="text" name="BAID" required><br>
     Email: <input type="email" name="email" required><br>
     Password: <input type="password" name="password" required><br>
     <button type="submit" value="Login">Login</button>
-    <a href="/reg/{{role}}"><button type="button" value="Register">Register</button>
+    <a href="/auth/register/b"><button type="button" value="Register">Register</button>
     <a href="">Forget Password?</a>
     <a href="">Forget BAID?</a>
-    <div>{{error}}</div><br>
-    <div>{{usr}}</div><br>
-    <div>{{pw}}</div><br>
-</form>
-{%endblock%}
+{% endblock %}
