--- a/Project/AMS/templates/login_c.html
+++ b/Project/AMS/templates/login_c.html
@@ -1,15 +1,10 @@
 {%extends "login.html"%}
 {%block header %} Customer Login {%endblock%}
-{%block content%}
-<form action="auth/login{{role}}" method="POST">
+{%block form %}
     <!-- front-end will handle -->
     Email: <input type="email" name="email" required><br>
     Password: <input type="password" name="password" required><br>
     <button type="submit" value="Login">Login</button>
-    <a href="/reg/{{role}}"><button type="button" value="Register">Register</button>
+    <a href="/auth/register/c"><button type="button" value="Register">Register</button>
     <a href="">Forget Password?</a>
-    <div>{{error}}</div><br>
-    <div>{{usr}}</div><br>
-    <div>{{pw}}</div><br>
-</form>
 {%endblock%}
