--- a/Project/AMS/templates/reg_a.html
+++ b/Project/AMS/templates/reg_a.html
@@ -17,6 +17,6 @@
             {%endfor%}
         </select>
         <input type="submit" name="submit" value="Submit">
-        <a href="/login/{{role}}"><button type="button" value="back">Back to Login</button></a>
+        <a href="/auth/login/a"><button type="button" value="back">Back to Login</button></a>
     </form>
 {%endblock%}
