--- a/Project/AMS/templates/reg_b.html
+++ b/Project/AMS/templates/reg_b.html
@@ -5,7 +5,6 @@
         Password: <input type="password" name="password"><br>
         Confirm password:<input type="password" name="password_c"><br>
         <input type="submit" name="submit" value="Submit">
-        <a href="/login/{{role}}"><button type="button" value="back">Back to Login</button></a>
+        <a href="/auth/login/b"><button type="button" value="back">Back to Login</button></a>
         <p>A BAID will be assigned to you once the registration is done.</p>
-    </form>
 {%endblock%}
