index pages have been set up. putting different pages in different folders.

--- a/Project/AMS/templates/login_index.html
+++ b/Project/AMS/templates/login_index.html
@@ -6,6 +6,7 @@
     <title>Login</title>
 </head>
 <body>
+    <h1>Please login first to continue your action</h1>
    <a href="/auth/login/a">Login for Airline Staff</a> 
    <a href="/auth/login/b">Login for Booking Agent</a> 
    <a href="/auth/login/c">Login for Customer</a> 
