--- a/Project/AMS/templates/b/customer.html
+++ b/Project/AMS/templates/b/customer.html
@@ -1,7 +1,7 @@
 {% extends "index.html"%}
 {% block content%}
  <h1>Booking Agent Index</h1>
- <a href="/b/flight">My Flights</a>
+ <a href="/b/flights">My Flights</a>
  <a href="/b/search">Flight Search</a>
  <a href="/b/commission">My Commissions</a>
  <a href="/b/customer">My Customers</a>
