--- a/Project/AMS/templates/a/addflights.html
+++ b/Project/AMS/templates/a/addflights.html
@@ -1,14 +1,9 @@
 {% extends "index.html"%}
 {% block content%}
- <h1> Airline Staff Index </h1>
- <a href="/a/flights">My Flights</a>
- <a href="/a/addflights">Add Flights</a>
- <a href="/a/addplane">Add Plane</a>
- <a href="/a/addairport">Add Airport</a>
- <a href="/a/ba">Booking Agents</a>
- <a href="/a/customer">Frequent Customer</a>
- <a href="/a/reports">Reports</a>
- <a href="/a/revenue">Revenues</a>
- <a href="/a/topdest">Top Destinations</a>
- {% endblock %}
+<h1> Add Flights </h1>
+<form action="">
+    <input type="text">
+    <input type="submit" value="Submit">
+</form>
+{% endblock %}
     
