--- a/Project/AMS/templates/a/topdest.html
+++ b/Project/AMS/templates/a/topdest.html
@@ -1,14 +1,13 @@
 {% extends "index.html"%}
 {% block content%}
- <h1> Airline Staff Index </h1>
- <a href="/a/flights">My Flights</a>
- <a href="/a/addflights">Add Flights</a>
- <a href="/a/addplane">Add Plane</a>
- <a href="/a/addairport">Add Airport</a>
- <a href="/a/ba">Booking Agents</a>
- <a href="/a/customer">Frequent Customer</a>
- <a href="/a/reports">Reports</a>
- <a href="/a/revenue">Revenues</a>
- <a href="/a/topdest">Top Destinations</a>
+<form action="{{url_for('c.flight_info')}}">
+    Start Date: <input type="date" name="start_date">
+    End Date: <input type="date" name="end_date">
+    <input type="submit" value="Search">
+</form>
+<h2>Flights</h2>
+{% for item in flights%}
+
+{% endfor %}
  {% endblock %}
     
