airline staff 75 percent done

--- a/Project/AMS/templates/a/confirm.html
+++ b/Project/AMS/templates/a/confirm.html
@@ -1,6 +1,6 @@
 {% extends "index.html"%}
 {% block content%}
-    {{action}} success.
+   <h2> {{action}} success.</h2>
     <a href="{{url_for('a.index')}}">Back to index</a>
  {% endblock %}
     
