--- a/Project/AMS/templates/a/addairport.html
+++ b/Project/AMS/templates/a/addairport.html
@@ -1,14 +1,19 @@
 {% extends "index.html"%}
 {% block content%}
- <h1> Airline Staff Index </h1>
- <a href="/a/flights">My Flights</a>
- <a href="/a/addflights">Add Flights</a>
- <a href="/a/addplane">Add Plane</a>
- <a href="/a/addairport">Add Airport</a>
- <a href="/a/ba">Booking Agents</a>
- <a href="/a/customer">Frequent Customer</a>
- <a href="/a/reports">Reports</a>
- <a href="/a/revenue">Revenues</a>
- <a href="/a/topdest">Top Destinations</a>
+ <h1> Add airport for {{g.user[5]}}</h1>
+ <form action="#" method="POST">
+     Name<input type="text" name="name"><br>
+     City<input type="text" name="city"><br>
+     <input type="submit" value="Submit">
+ </form>
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+  {% endwith %}
  {% endblock %}
     
