--- a/Project/AMS/templates/b/reg_b.html
+++ b/Project/AMS/templates/b/reg_b.html
@@ -1,10 +1,30 @@
-{%extends 'reg.html'%}
-{%block header%}Booking Agent Registration{%endblock%}
+{%extends "reg.html"%}
+{%block banner %} <div class="">
+    Booking Agent Register
+</div> {%endblock%}
 {%block content%}
-        Email: <input type="email" name="email"><br>
-        Password: <input type="password" name="password"><br>
-        Confirm password:<input type="password" name="password_c"><br>
-        <input type="submit" name="submit" value="Submit">
-        <a href="/auth/login/b"><button type="button" value="back">Back to Login</button></a>
-        <p>A BAID will be assigned to you once the registration is done.</p>
+<div class="col-lg-4">
+
+</div>
+<div class="col-lg-4">
+    <!-- <p class="text-muted">Login Information</p> -->
+    <div class="form-group">
+        <label for="email">Email</label>
+        <input type="text" id="email" name="email" required class="form-control">
+    </div>
+    <div class="form-group">
+        <label for="pwd">Password</label>
+        <input type="password" id="pwd" name="password" required class="form-control">
+    </div>
+    <div class="form-group">
+        <label for="confirm_pwd">Confirm Password</label>
+        <input type="password" id="confirm_pwd" name="password_c" required class="form-control">
+    </div>
+    <!-- <p class="text-muted">Agent Information</p>
+    <div class="form-group">
+        <label for="agent">Agent ID</label>
+        <input type="text" id="agent" name="agent" required class="form-control">
+    </div> -->
+</div>
+<br>
 {%endblock%}
