--- a/Project/AMS/templates/c/index_c.html
+++ b/Project/AMS/templates/c/index_c.html
@@ -1,7 +1,7 @@
-{% extends "index.html"%}
-{% block content%}
- <h1>Customer Index</h1>
- <a href="/c/flights">My Flights</a>
- <a href="/c/search">Search Flights</a>
- <a href="/c/bill">My Spending</a>
- {% endblock %}
+<html>
+    <head>
+        <script>
+        window.location.href = '/c/flights';
+        </script>
+    </head>
+</html>
