--- a/Project/AMS/templates/dashboard.html
+++ b/Project/AMS/templates/dashboard.html
@@ -1,11 +1,110 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Dashboard</title>
+    <title>My Dashboard | Contrails</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+    <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js"
+        integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.min.js">
+    </script>
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker.min.css" />
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
+    <style>
+        a {
+            color: white;
+        }
+
+        a:hover {
+            color: #30aab8;
+        }
+    </style>
 </head>
+
 <body>
-    This is the dashboard page.
+    <div class="container">
+        <!--Navigator Bar-->
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #048998;">
+            {% if g.role == 'c' %}
+            <a class="navbar-brand" href="/c/search">con<strong>trails</strong>&nbsp;<i class="fas fa-plane"
+                    data-fa-transform="rotate--45"></i></a>
+            {% elif g.role == 'b' %}
+            <a class="navbar-brand" href="/b/search">con<strong>trails</strong>&nbsp;<i class="fas fa-plane"
+                data-fa-transform="rotate--45"></i></a>
+            {% else %}
+            <a class="navbar-brand" href="/">con<strong>trails</strong>&nbsp;<i class="fas fa-plane"
+                data-fa-transform="rotate--45"></i></a>
+            {% endif %}
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        {% if g.role == 'c' %}
+                        <a class="nav-link" href="/c/search">Home / Search&nbsp;<i class="fas fa-search"></i></a>
+                        {% elif g.role == 'b' %}
+                        <a class="nav-link" href="/b/search">Home / Search&nbsp;<i class="fas fa-search"></i></a>
+                        {% else %}
+                        <a class="nav-link" href="/">Home / Search&nbsp;<i class="fas fa-search"></i></a>
+                        {% endif %}
+                    </li>
+
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item dropdown active" id="cookie">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Hi, {{g.username}}!
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="/{{g.role}}/flights">My Dashboard</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{{url_for('auth.logout')}}">Log out</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <!-- tabs -->
+        <div class="container-fluid"
+            style="color: white; background-image: url('../static/journey.jpg'); background-size: 100%; padding-left: 0px; border-bottom: 20px; border-color: black">
+
+            <div style="padding-left:2vw">
+                <div style="font-size: 3vw; padding-bottom: 1vh">
+                    Nice to see you, {{g.username}}
+                </div>
+            </div>
+            <br>
+            <div>
+                <ul class="nav nav-tabs justify-content-end" role="tablist">
+                    {% block tab %}{%endblock%}
+                </ul>
+            </div>
+        </div>
+        <br>
+        <!-- content -->
+        <div class="tab-content" id="myTabContent">
+            {%block panel%}{%endblock%}
+        </div>
+    </div>
+    <br>
 </body>
+
 </html>
