--- a/Project/AMS/templates/login.html
+++ b/Project/AMS/templates/login.html
@@ -16,25 +16,99 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
-    <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js"
+        integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous">
+    </script>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 
 <body>
-    {% block header %}{%endblock%}
-    <form action="#" method="POST">
-        {% block form %}{% endblock %}
-    </form>
-    {% block content %}{% endblock %}
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-      <ul class=flashes>
-      {% for message in messages %}
-        <li>{{ message }}</li>
-      {% endfor %}
-      </ul>
-    {% endif %}
-    {% endwith %}
+    <div class="container">
+        <!--Navigator Bar-->
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #048998;">
+            <a class="navbar-brand" href="/">con<strong>trails</strong>&nbsp;<i class="fas fa-plane"
+                    data-fa-transform="rotate--45"></i></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">Home / Search&nbsp;<i class="fas fa-search"></i></a>
+                    </li>
+
+                </ul>
+
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item dropdown active" id="before1">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Register
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="/auth/register/c">Customer</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/auth/register/b">Booking Agent</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/auth/register/a">Airline Staff</a>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown active" id="before2">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Login
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="/auth/login/c">Customer</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/auth/login/b">Booking Agent</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/auth/login/a">Airline Staff</a>
+                            </a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Banner -->
+        <div class="row">
+
+            <div class="col">
+                <div
+                    style="color: white; background-image: url('../../static/journey.jpg'); background-size: 100%; font-size: 3vw; padding-left: 2vw;padding-bottom: 1vh">
+                    {% block header %}{%endblock%}
+                    <br></div>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-lg-4"></div>
+            <div class="col-lg-4">
+                {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    {% for message in messages %}
+                    <p class="text-danger">{{ message }}</p>
+                    {% endfor %}
+                {% endif %}
+                {% endwith %}
+                {% block content%}{%endblock%}
+            </div>
+            <div class="col-lg-4"></div>
+
+            <footer class="fixed-bottom">
+                <div class="row">
+                    <div class="col" style="text-align: center; color: #048998">
+                        Copyright © 2019 Zander Mao & Helium Liu<br>
+                        All rights reserved.
+                        <br>
+                        <br>
+                    </div>
+                </div>
+            </footer>
+        </div>
 </body>
 
 </html>
