--- a/Project/AMS/templates/dashboard.html
+++ b/Project/AMS/templates/dashboard.html
@@ -83,7 +83,7 @@
             </div>
         </nav>
         <!-- tabs -->
-        <div class="container-fluid"
+        <div class="container-fluid" id="banner"
             style="color: white; background-image: url('../static/journey.jpg'); background-size: 100%; padding-left: 0px; border-bottom: 20px; border-color: black">
 
             <div style="padding-left:2vw">
