--- a/Project/AMS/templates/a/flight_info.html
+++ b/Project/AMS/templates/a/flight_info.html
@@ -1,11 +1,139 @@
-{% extends "index.html"%}
-{% block content%}
+{%extends "dashboard.html"%}
+{%block tab%}
+<script>
+  document.getElementById("banner").style.backgroundImage = "url('../../../static/journey.jpg')"
+</script>
+<li class="nav-item">
+    <a class="nav-link active" id="history-tab" href="/a/flights" role="tab" aria-controls="history"
+        aria-selected="true">Current Flights</a>
+</li>
+<li class="nav-item">
+
+    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+        aria-expanded="false">Add</a>
+    <div class="dropdown-menu">
+        <a class="dropdown-item" href="/a/addflights">Add Flights</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="/a/addplane">Add Plane</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="/a/addairport">Add Airport</a>
+    </div>
+</li>
+<li class="nav-item">
+    <a class="nav-link" id="stats-tab" href="/a/ba" role="tab" aria-controls="stats" aria-selected="false">Booking
+        Agent</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" id="stats-tab" href="/a/customer" role="tab" aria-controls="stats"
+        aria-selected="false">Frequent Customer</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" id="stats-tab" href="/a/reports" role="tab" aria-controls="stats"
+        aria-selected="false">Reports</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" id="stats-tab" href="/a/revenue" role="tab" aria-controls="stats"
+        aria-selected="false">Revenue</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" id="stats-tab" href="/a/topdest" role="tab" aria-controls="stats" aria-selected="false">Top
+        Destination</a>
+</li>
+{%endblock%}
+
+{%block panel%}
+
+<div class="container-fluid" style="padding:0px">
+    <div class="row">
+        <!-- Filter -->
+        <div class="col-lg-3">
+            <div class="card" style="background-color:#30aab8; color: white; padding: 0px">
+                <h5 class="card-header">Time Filter</h5>
+                <div class="card-body">
+                    <form action="#" method="POST">
+                        <div class="form-group">
+                            <label for="start">Start Date</label>
+                            <input type="text" class="form-control" id="start" name="start_date"
+                                placeholder="YYYY-MM-DD" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="end">End Date</label>
+                            <input type="text" class="form-control" id="end" name="end_date" placeholder="YYYY-MM-DD"
+                                required>
+                        </div>
+                        <script>
+                            $('#start').datepicker({
+                                autoclose: true,
+                                todayHighlight: true,
+                                format: 'yyyy-mm-dd'
+                            });
+                            $('#end').datepicker({
+                                autoclose: true,
+                                todayHighlight: true,
+                                format: 'yyyy-mm-dd'
+                            });
+                        </script>
+                        <button type="submit" value="Submit" id="searchhis" class="btn btn-outline-light btn-block"
+                            style="margin-top:35px"><i class="fas fa-search"></i> Search Flights</button>
+                    </form>
+                </div>
+            </div>
+            <br>
+        </div>
+
+        <div class="col-lg">
+            <div class="card" style="border-color:#30aab8; border-width: 2px; padding: 0px">
+                <div class="card-body" style="padding:0">
+                    {% if flights %}
+                    <div class="table-responsive">
+                        <table class="table table-striped" style="margin:0">
+                            <thead>
+                                <tr>
+                                    <th>Departure Airport</th>
+                                    <th>Arrive Airport</th>
+                                    <th>Departure Time</th>
+                                    <th>Arrive Time</th>
+                                    <th>Status</th>
+                                    <th>Base Price</th>
+                                    <th>Info</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for flight in flights %}
+                                <tr>
+                                    {% for item in flight[:6] %}
+                                    <td>{{item}}</td>
+                                    {% endfor %}
+                                    <td>
+                                        <form action="{{url_for('a.flight_info', flight_id = flight[6])}}" method="GET">
+                                            <input type="radio" name="flight_id" style="display: none"
+                                                value="{{flight[6]}}">
+                                            <input class="btn btn-success" type="submit"
+                                                value="More Info & Edit Status">
+                                        </form>
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                        {% else %}
+                        <h2>No data, please specify time range</h2>
+                    </div>
+                    {% endif%}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
  <h1>Info for Flight {{flight_id}}</h1>
  <form action="#" method="POST">
      <input type="radio" style="visibility:hidden" name="flight_id" value="{{flight_id}}" checked>
      <select name="status" id="">
          <option value=0>On Time</option>
-         <option value=1>Delay</option>
+         <option value=1>Delayed</option>
      </select>
      <input type="submit" value="Submit">
  </form>
@@ -37,4 +165,13 @@
     </ul>
   {% endif %}
   {% endwith %}
-{% endblock %}
+
+
+
+<style>
+    .table-striped>tbody>tr:nth-child(odd)>td,
+    .table-striped>tbody>tr:nth-child(odd)>th {
+        background-color: #bfeef3;
+    }
+</style>
+{%endblock%}
