--- a/Project/AMS/templates/b/confirm_order.html
+++ b/Project/AMS/templates/b/confirm_order.html
@@ -17,7 +17,8 @@
      </tr>
  </table>
  <form action="#" method="POST">
-     <input type="radio" name="type" value="confirm" style="visibility:hidden" checked> 
+     Customer Email:<input type="email" name="customer_email" required>
+     <input type="radio" name="type" value="confirm" style="display:none" checked> 
      <input type="radio" name="flight_id" value="{{result[6]}}" style="visibility:hidden" checked> 
      Payment
      <input type="radio" name="payment" value="credit"> Credit Card
