--- a/Project/AMS/templates/b/customer.html
+++ b/Project/AMS/templates/b/customer.html
@@ -1,8 +1,8 @@
 {% extends "index.html"%}
 {% block content%}
- <h1>Booking Agent Index</h1>
- <a href="/b/flights">My Flights</a>
- <a href="/b/search">Flight Search</a>
- <a href="/b/commission">My Commissions</a>
- <a href="/b/customer">My Customers</a>
+ <h1>Customer Data</h1>
+ <h2>Last 6 Month</h2>
+ {{six_months_cnt}}
+ <h2>Past Year Commission</h2>
+ {{one_year_commission}}
  {% endblock %}
