--- a/Project/AMS/templates/b/flights.html
+++ b/Project/AMS/templates/b/flights.html
@@ -1,8 +1,27 @@
 {% extends "index.html"%}
 {% block content%}
- <h1>Booking Agent Index</h1>
- <a href="/b/flights">My Flights</a>
- <a href="/b/search">Flight Search</a>
- <a href="/b/commission">My Commissions</a>
- <a href="/b/customer">My Customers</a>
+ <h1>My Flights</h1>
+ {% if flights %}
+ <table>
+    <tr>
+        <th>Customer Name</th>
+        <th>Customer Email</th>
+        <th>Airline</th>
+        <th>Departure Time</th>
+        <th>Departure Airport</th>
+        <th>Arrive Time</th>
+        <th>Arrive Airport</th>
+        <th>Flight Status</th>
+    </tr>
+    {% for items in flights %}
+    <tr>
+        {% for item in items %}
+        <td>{{item}}</td>
+        {% endfor %}
+    </tr>
+    {% endfor %}
+    </table>
+ {% else %}
+ <h2>You haven't ordered any flight</h2>
+ {% endif%}
  {% endblock %}
