--- a/Project/AMS/templates/b/customer.html
+++ b/Project/AMS/templates/b/customer.html
@@ -1,8 +1,42 @@
 {% extends "index.html"%}
 {% block content%}
  <h1>Customer Data</h1>
- <h2>Last 6 Month</h2>
- {{six_months_cnt}}
+ <h2>Traveled Most Last 6 Month</h2>
+ {% if six_months_cnt %}
+ <table>
+     <tr>
+         <th>Customer Name</th>
+         <th>Customer Email</th>
+         <th>Ticket Purchased</th>
+     </tr>
+ {% for customer in six_months_cnt %}
+     <tr>
+         {% for item in customer %}
+         <td>{{item}}</td>
+         {% endfor %}
+     </tr>
+ {% endfor %}
+ </table>
+ {% else %}
+ <h2>No data</h2>
+ {% endif %}
  <h2>Past Year Commission</h2>
- {{one_year_commission}}
+ {% if one_year_commission %}
+ <table>
+     <tr>
+         <th>Customer Name</th>
+         <th>Customer Email</th>
+         <th>Commissions</th>
+     </tr>
+ {% for customer in one_year_commission %}
+     <tr>
+         {% for item in customer %}
+         <td>{{item}}</td>
+         {% endfor %}
+     </tr>
+ {% endfor %}
+ </table>
+ {% else %}
+ <h2>No data</h2>
+ {% endif %}
  {% endblock %}
