--- a/Project/AMS/templates/a/flights.html
+++ b/Project/AMS/templates/a/flights.html
@@ -114,7 +114,7 @@
                             </tbody>
                         </table>
                         {% else %}
-                        <h2 class="text-center" style="padding:2vw; font-size: 5vw">No data, please specify time range</h2>
+                        <h2 class="text-center" style="padding:2vw">No data, please specify time range</h2>
                     </div>
                     {% endif%}
                 </div>
