--- a/Project/AMS/templates/a/login_a.html
+++ b/Project/AMS/templates/a/login_a.html
@@ -17,9 +17,10 @@
     <br>
     <br>
     <p style="text-align:center">Not in our system? <a href="/auth/register/c">Register Now!</a></p>
-    <div>{{error}}</div><br>
-    <div>{{usr}}</div><br>
-    <div>{{pw}}</div><br>
-
 </form>
+<style>
+    #footer-back {
+        height: 31vh !important;
+    }
+    </style>
 {%endblock%}
