--- a/Project/AMS/templates/b/reg_b.html
+++ b/Project/AMS/templates/b/reg_b.html
@@ -3,6 +3,7 @@
     Booking Agent Register
 </div> {%endblock%}
 {%block content%}
+
 <div class="col-lg-4">
 
 </div>
@@ -27,4 +28,9 @@
     </div> -->
 </div>
 <br>
+<style>
+#footer-back {
+    height: 34.5vh !important;
+}
+</style>
 {%endblock%}
