--- a/Project/AMS/templates/c/login_c.html
+++ b/Project/AMS/templates/c/login_c.html
@@ -19,4 +19,9 @@
     <p style="text-align:center">Not a member? <a href="/auth/register/c">Register Now!</a></p>
 
 </form>
+<style>
+    #footer-back {
+        height: 31vh !important;
+    }
+    </style>
 {%endblock%}
