--- a/Project/AMS/templates/page_not_found.html
+++ b/Project/AMS/templates/page_not_found.html
@@ -10,4 +10,169 @@
     <div>{{error}}</div>
     Oops, there is nothing here...
 </body>
-</html>
+</html><html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Page Not Found | Contrails</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+        </script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.min.js">
+        </script>
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker.min.css" />
+        <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js"
+            integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous">
+        </script>
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    </head>
+    
+    <body>
+        {% block success %}{%endblock%}
+        <div class="container">
+            <!-- NAVBAR -->
+            <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #048998;">
+                {% if g.role == 'c' %}
+                <a class="navbar-brand" href="/c/search">con<strong>trails</strong>&nbsp;<i class="fas fa-plane"
+                        data-fa-transform="rotate--45"></i></a>
+                {% elif g.role == 'b' %}
+                <a class="navbar-brand" href="/b/search">con<strong>trails</strong>&nbsp;<i class="fas fa-plane"
+                    data-fa-transform="rotate--45"></i></a>
+                {% else %}
+                <a class="navbar-brand" href="/">con<strong>trails</strong>&nbsp;<i class="fas fa-plane"
+                    data-fa-transform="rotate--45"></i></a>
+                {% endif %}
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            {% if g.role == 'c' %}
+                            <a class="nav-link" href="/c/search">Home / Search&nbsp;<i class="fas fa-search"></i></a>
+                            {% elif g.role == 'b' %}
+                            <a class="nav-link" href="/b/search">Home / Search&nbsp;<i class="fas fa-search"></i></a>
+                            {% else %}
+                            <a class="nav-link" href="/">Home / Search&nbsp;<i class="fas fa-search"></i></a>
+                            {% endif %}
+                        </li>
+    
+                    </ul>
+    
+                    <ul class="navbar-nav ml-auto">
+                        {% if g.user %}
+                        <li class="nav-item dropdown active" id="cookie">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                Hi, {{g.username}}!
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item" href="/{{g.role}}/flights">My Dashboard</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="{{url_for('auth.logout')}}">Log out</a>
+                            </div>
+                        </li>
+                        {% else %}
+                        <li class="nav-item dropdown active" id="before1">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                Register
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item" href="/auth/register/c">Customer</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="/auth/register/b">Booking Agent</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="/auth/register/a">Airline Staff</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown active" id="before2">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                Login
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item" href="/auth/login/c">Customer</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="/auth/login/b">Booking Agent</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="/auth/login/a">Airline Staff</a>
+                            </div>
+                        </li>
+                        {% endif %}
+    
+                    </ul>
+                </div>
+            </nav>
+    
+            <!-- Banner -->
+            <div class="row">
+                <div class="col">
+                    <div
+                        style="color: white; background-image: url('../static/journey.jpg'); background-size: 100%;width: 5vw ;font-size: 3vw; padding-left: 2vw;padding-bottom: 1vh">
+                        OOPS! ERROR 404<br><br></div>
+                </div>
+            </div>
+            <br>
+             <br>
+             <div class="row">
+                 <div class="col-lg-4"></div>
+                 <div class="col-lg-4">
+                     <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 30rem;">
+                         <div class="card-body">
+                             <h5 class="card-title" style="text-align:center"><i class="far fa-sad-tear"></i> We couldn't find the page you're looking for.</h5>
+                             <p class="card-text" style="text-align:center">You will be redirected to previous page in <strong id="second_show">5</strong>
+                                 seconds.</p>
+                         </div>
+                     </div>
+                 </div>
+                 <div class="col-lg-4"></div>
+    
+             </div>
+             <br>
+             <!-- Footer -->
+             <div class="flex-grow-1" id="footer-back"
+                 style="background-image: url('../../../static/footer.jpg'); background-size: cover; background-repeat: 0; height: 35vh">
+                 <footer class="fixed-bottom">
+                     <div class="row">
+                         <div class="col" style="text-align: center; color: white">
+                             Copyright © 2019 Zander Mao & Helium Liu<br>
+                             All rights reserved.
+                             <br>
+                             <br>
+                         </div>
+                     </div>
+                 </footer>
+             </div>
+         </div>
+         <script type="text/javascript">
+             var timeout = 5;
+    
+             function showError() {
+                 document.getElementById("second_show").innerHTML = timeout;
+                 timeout--;
+                 if (timeout == 0) {
+                    history.back();
+                 } else {
+                     setTimeout("showError()", 1000);
+                 }
+             }
+    
+             showError();
+         </script>
+     </body>
+    
+     </html>
+    
